2004-11-19  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-mime-actions.c:
	removed unneeded includes
	
	* src/nautilus-application.c:
	* src/nautilus-desktop-window.c:
	Removed app_id property on NautilusWindow
	
	* src/nautilus-main.c: (main):
	Remove old code
	
	* src/nautilus-navigation-window.c:
	* src/nautilus-sidebar-title.c:
	* src/nautilus-window-menus.c:
	* src/file-manager/fm-ditem-page.c:
	Remove bonobo comments
	
	* src/nautilus-window.c:
	Remove app_id property
	fix last bonobo details
	
	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c:
	* src/file-manager/nautilus-directory-view-ui.xml:
	remove edit launcher action

2004-11-19  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require new eel
	
	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.[ch]:
	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/nautilus-actions.h:
	* src/nautilus-shell-ui.xml:
	* src/nautilus-spatial-window-ui.xml:
	* src/nautilus-spatial-window.c:
	* src/nautilus-window-menus.c:
	* src/nautilus-window.[ch]:
	Implement some accels as GtkBindings instead to avoid
	overriding widget-specific keybindings like "delete" and "backspace".

2004-11-19  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-navigation-window.c:
	* src/nautilus-window-private.h:
	Put location entry etc in a toolbar.

2004-11-19  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c: (is_desktop_file),
	(nautilus_file_is_nautilus_link):
	Don't check for "application/x-gnome-app-info", as that is already
	handled by the alias system. This also avoids stating for a
	mimetype xml file.
	
	* src/nautilus-throbber.c:
	Don't create a new icon theme for each throbber.
	Use GtkIconTheme instead of GnomeIconTheme
	
	* libnautilus-private/nautilus-ui-utilities.[ch]:
	New function nautilus_ui_string_get to cache the loaded ui files.
	
	* src/nautilus-navigation-window.c:
	Remove old bonoboui stuff
	